Update MONGO_URI and add PORT variable

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
- MONGO_URI=mongodb+srv://TrustraFx:Kayblizz2015@trustrafx.2e8lfpi.mongodb.net/trustrafx
+mongodb+srv://TrustraFx:Kayblizz2015@trustrafx.2e8lfpi.mongodb.net/?appName=TrustraFx
 JWT_SECRET=Kayblizz1996
+PORT=5000
