--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-mongodb+srv://TrustraFx:Kayblizz2015@trustrafx.2e8lfpi.mongodb.net/?appName=TrustraFx
+MONGO_URI=mongodb+srv://TrustraFx:Kayblizz2015@trustrafx.2e8lfpi.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=Kayblizz1996
 PORT=5000
