--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
-  "name": "backend",
+  "name": "trustrafx",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "TrustraFx - Full-stack forex trading/financial website with MongoDB backend",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "build": "cd frontend && npm install && npm run build",
+    "dev": "node server.js"
   },
-  "keywords": [],
+  "keywords": [
+    "forex",
+    "trading",
+    "finance",
+    "trustrafx",
+    "mongodb"
+  ],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "bcryptjs": "^3.0.3",
+    "express": "^4.19.2",
+    "mongoose": "^8.7.0",
+    "dotenv": "^16.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.0.2"
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
