--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
-"dependencies": {
-  "express": "^4.18.2",
-  "mongoose": "^8.0.0",
-  "cors": "^2.8.5",
-  "dotenv": "^16.0.0",
-  "bcryptjs": "^2.4.3",
-  "jsonwebtoken": "^9.0.0",
-  "axios": "^1.6.0"
+{
+  "name": "trustrafx",
+  "version": "1.0.0",
+  "description": "TrustraFx - Real Forex Wealth Platform",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0",
+    "axios": "^1.6.0"
+  },
+  "engines": {
+    "node": ">=20"
+  }
 }
