--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "trustrafx",
   "version": "1.0.0",
-  "description": "TrustraFx - Real Forex Wealth Platform",
-  
- },
-  "dependencies": "dependencies": {
-  "express": "^4.18.2",
-  "mongoose": "^8.0.0",
-  "cors": "^2.8.5",
-  "dotenv": "^16.0.0",
-  "axios": "^1.6.0",
-  "bcryptjs": "^2.4.3",
-  "jsonwebtoken": "^9.0.0"
-},
+  "description": "TrustraFx - Real Cryptocurrency & Forex Investment Platform",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^8.7.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "axios": "^1.7.7"
+  },
   "engines": {
     "node": ">=20"
   }
